Refactorizacion de los metodos y arreglo en los errores de sonarq